app/assets/stylesheets/directory_objects_show.css.scss
/* ... */
ul.vertical-nav {
  float: left;
  // Do _NOT_ use "position: fixed;". Causes SVG blurriness on zoom in Safari
  position: absolute;
  list-style: none;
  text-align: center;
  padding: 2vh 15px 0;
  // left: 0;
  width: $vertical-nav-width;
  height: calc(100vh - 15px);

  li {
    margin: 5px 10px 5vh;

    height: 11vh;
    width: 11vh;
    font-size: 1.8vh;

    a {
      display: block;
      width: 100%;
      height: 100%;
      position: relative;
      text-align: center;
      border-radius: 50%;
      border: 7px solid #fff;
      font-size: 3em;
      box-shadow: 0px 3px 8px 0 rgba(0,0,0,.3);

      span {
        font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
        text-transform: uppercase;
        white-space: normal;
        position: absolute;
        left: -50%;
        top: 100%;
        width: 200%;
        text-align: center;
        margin-top: 2.65vh;
        font-size: 0.3em;
        line-height: 1em;
      }

      &:before {
        content: "";
        display: block;
        background: #fff;
        border-top: 2px solid #ddd;
        position: absolute;
        top: -0.3em;
        left: -0.3em;
        bottom: -0.3em;
        right: -0.3em;
        z-index: -1;
        border-radius: 50%;
        box-shadow: inset 0px 8px 48px #ddd;
      }
    }

    &:hover {
      a {
        color: #eee;
        text-decoration: none;
      }
      span {
        color: #333;
      }
    }
  }
}

.btn-home {
  background-color: $home-color;
  color: white;
}

.btn-people {
  background-color: $people-color;
  color: white;
}

.btn-events {
  background-color: $events-color;
  color: white;
}

.btn-rooms {
  background-color: $rooms-color;
  color: white;
}

.btn-departments {
  background-color: $departments-color;
  color: white;
}

.btn-map {
  background-color: $map-color;
  color: white;
}

.btn-search {
  background: $search-color;
  color: white;
}

.btn-logout {
  background: $logout-color;
  color: white;
}

.btn-floor {
  background: $floor-color;
  color: white;
}

.btn-map-action {
  background: $floor-color;
  color: white;
}

.btn-about {
  background: $about-color;
  color: white;
}

.text-home {
  color: $home-color;
}

.text-people {
  color: $people-color;
}

.text-events {
  color: $events-color;
}

.text-rooms {
  color: $rooms-color;
}

.text-departments {
  color: $departments-color;
}

.text-map {
  color: $map-color;
}

.text-search {
  color: $search-color;
}

.text-floor {
  color: $floor-color;
}

.text-about {
  color: $about-color;
}

#directory-banner {
  height: 7%;
}

h1#directory-title {
  color: gray;
  text-transform: uppercase;
  margin: 1em 0.2em;
}

ul.directory-list {
  list-style: none;
  padding: 0;

  li {
    position: relative;
    margin: 5px 20px 35px;
    float: left;
    width: 25%;

    a {
      display: block;
      text-indent:7px;
      width: 100%;
      height: 100%;
      position: relative;
      border-radius: 5px;
      box-shadow: 0px 3px 8px 0 rgba(0,0,0,.3);

      p {
        margin: 0;
        white-space: nowrap;
        width: 100%;
        overflow: hidden;
      }

      &.people-card {
        border: 7px solid $people-color;
        color: $people-color;
        h3 {
          color: $people-color;
        }
      }

      &.events-card {
        border: 7px solid $events-color;
        color: $events-color;
        h3 {
          color: $events-color;
        }
      }

      &.rooms-card {
        border: 7px solid $rooms-color;
        color: $rooms-color;
        h3 {
          color: $rooms-color;
        }
      }

      &.departments-card {
        border: 7px solid $departments-color;
        color: $departments-color;
        h3 {
          color: $departments-color;
        }
      }

      h3 {
        text-align: center;
        color: #EEE;
        font-size: 1.7rem;
        font-weight: bold;
        margin-top: 10px;
      }

      &:before {
        content: "";
        display: block;
        background: #fff;
        border-top: 2px solid #ddd;
        position: absolute;
        top: -18px;
        left: -18px;
        bottom: -18px;
        right: -18px;
        z-index: -1;
        border-radius: 5px;
        box-shadow: inset 0px 8px 48px #ddd;
      }
    }

    &:hover {
      a {
        border: 7px solid #999;
        color: #999;
        text-decoration: none;
        h3 {
          color: #999;
        }
      }
      span {
        color: #333;
      }
    }
  }
}

/* Search interface styling below */
.right-btn-container {
  position: fixed;
  z-index: 999;
  right: $right-btn-container-right-offset;
  width: $right-btn-container-width;

  &.search {
    top: 30px;
  }

  &.home, &.about {
    bottom: 30px;
  }

  a {
      display: block;
      width: 55px;
      height: 55px;
      position: relative;
      text-align: center;
      color: #FFF;
      line-height: 45px;
      border-radius: 50%;
      border: 5px solid #fff;
      font-size: 2em;
      box-shadow: 1px 3px 8px 0 rgba(0,0,0,.3);

      &:before {
        content: "";
        display: block;
        background: #fff;
        border-top: 2px solid #ddd;
        position: absolute;
        top: -11px;
        left: -11px;
        bottom: -11px;
        right: -11px;
        z-index: -1;
        border-radius: 50%;
        box-shadow: inset 2px 4px 20px #ddd;
      }

      &:hover {
        color: #999;
        text-decoration: none;
      }
  }
}

input.search {
  height: 2em;
  margin: 1.2em 0.3em 2em;
  background: white;
  font-size: 2em;
  border-radius: 7px;
  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2) inset;
  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
}

input.search:focus {
  outline: none;
  box-shadow: 0 -1px 1px rgba(255, 255, 255, 0.25), 0 1px 5px rgba(0, 0, 0, 0.15);
}

.floor {
    width: 15%;
}

.show-map
{
  width: 100%;
  height: 100vh;
  padding-top: 2vh;
}
/* ... */

